tests/characterization/snapshots/legacy_metadata_keys__migrated_by_backend_info.snap
---
source: tests/characterization/metadata.rs
expression: "render_observation(&context, &output, &[\".metadata\"])"
---
exit: 0
--- stdout ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
created_at=2031-12-13T14:15:16Z
environment_root=<TEST_ROOT>/work
environment_name=demo
--- stderr ---
--- filesystem ---
.metadata
--- selected files ---
--- .metadata ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
created_at=2031-12-13T14:15:16Z
environment_root=<TEST_ROOT>/work
environment_name=demo
--- end ---
